--- a/etcd-amd64/Dockerfile
+++ b/etcd-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/etcd-amd64:v3.2.10
+FROM gcr.io/google_containers/etcd-amd64:3.2.10
 MAINTAINER mritd <mritd@mritd.me>
