--- a/fluentd-elasticsearch/Dockerfile
+++ b/fluentd-elasticsearch/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/google_containers/fluentd-elasticsearch:1.23
+FROM gcr.io/google_containers/fluentd-elasticsearch:v5.5.1-1
 MAINTAINER Jason <piml.lui@gmail.com>
 
 
